--- a/app.json
+++ b/app.json
@@ -2,6 +2,6 @@
   "name": "python Sample",
   "description": "Chatbot application to find from own Ticket ID",
   "repository": "https://github.com/tamilsud/first_program",
-  "logo": "https://rawgit.com/heroku/node-js-sample/master/public/node.svg",
+  "logo": "http://xvir.github.io/img/apiai.png",
   "keywords": ["Python", "chatbot", "Ticket"]
 }
