--- a/app.json
+++ b/app.json
@@ -2,21 +2,12 @@
 {
   "name": "Start on Heroku: Python",
   "description": "A barebones Python app, which can easily be deployed to Heroku.",
-  "image": "heroku/python",
-  "repository": "https://github.com/tamilsud/first_program",
-  "keywords": ["python", "django" ],
-  "env": {
-    "SECRET_KEY": {
-      "description": "The secret key for the Django application.",
-      "generator": "secret"
+  "buildpacks": [
+    {
+      "url": "https://github.com/heroku/heroku-buildpack-python"
+    },
+    {
+      "url": "heroku/python"
     }
-  },
-  "environments": {
-    "test": {
-      "scripts": {
-        "test-setup": "python app.py collectstatic --noinput",
-        "test": "python app.py test"
-      }
-    }
-  }
+  ]
 }
